@@ -9,8 +9,10 @@ module OAI
   # a OAI-PMH server. The 6 OAI-PMH verbs translate directly to methods you 
   # can call on a OAI::Client object. Verb arguments are passed as a hash:
   #
-  #   client = OAI::Client.new ''http://www.pubmedcentral.gov/oai/oai.cgi'
-  #   client.list_identifiers :metadata_prefix => 'oai_dc'
+  #   client = OAI::Client.new 'http://www.pubmedcentral.gov/oai/oai.cgi'
+  #   record = client.get_record :identifier => 'oai:pubmedcentral.gov:13901'
+  #   for identifier in client.list_identifiers :metadata_prefix => 'oai_dc'
+  #     puts identifier.
   #
   # It is worth noting that the api uses methods and parameter names with 
   # underscores in them rather than studly caps. So above list_identifiers 
@@ -71,8 +73,7 @@ module OAI
     # object is returned to you. 
     
     def list_metadata_formats(opts={})
-      opts[:verb] = 'ListMetadataFormats'
-      verify_verb_arguments opts, [:verb, :identifier]
+      sanitize_verb_arguments 'ListMetadataFormats', opts, [:verb, :identifier]
       return ListMetadataFormatsResponse.new(do_request(opts))
     end
 
@@ -81,9 +82,9 @@ module OAI
     # supported by the server.
     
     def list_identifiers(opts={})
-      opts[:verb] = 'ListIdentifiers'
+      sanitize_verb_arguments 'ListIdentifiers', opts, 
+        [:verb, :from, :until, :metadata_prefix, :set, :resumption_token]
       add_default_metadata_prefix opts
-      verify_verb_arguments opts, [:verb, :from, :until, :metadata_prefix, :set,         :resumption_token]
       return ListIdentifiersResponse.new(do_request(opts)) 
     end
 
@@ -92,9 +93,9 @@ module OAI
     # which you can extract a OAI::Record object from.
     
     def get_record(opts={})
-      opts[:verb] = 'GetRecord'
+      sanitize_verb_arguments 'GetRecord', opts, 
+        [:verb, :identifier, :metadata_prefix]
       add_default_metadata_prefix opts
-      verify_verb_arguments opts, [:verb, :identifier, :metadata_prefix]
       return GetRecordResponse.new(do_request(opts))
     end
 
@@ -106,10 +107,9 @@ module OAI
     #   end
     
     def list_records(opts={})
-      opts[:verb] = 'ListRecords'
-      add_default_metadata_prefix opts
-      verify_verb_arguments opts, [:verb, :from, :until, :set, 
+      sanitize_verb_arguments 'ListRecords', opts, [:verb, :from, :until, :set, 
         :resumption_token, :metadata_prefix]
+      add_default_metadata_prefix opts
       return ListRecordsResponse.new(do_request(opts))
     end
 
@@ -122,8 +122,7 @@ module OAI
     #   end
     
     def list_sets(opts={})
-      opts[:verb] = 'ListSets'
-      verify_verb_arguments opts, [:verb, :resumptionToken]
+      sanitize_verb_arguments 'ListSets', opts, [:verb, :resumptionToken]
       return ListSetsResponse.new(do_request(opts))
     end
 
@@ -150,13 +149,16 @@ module OAI
       # fire off the request and return appropriate DOM object
       begin
         xml = Net::HTTP.get(uri)
-	if @parser == 'libxml': xml = xml.gsub(/xmlns=\"http:\/\/www.openarchives.org\/OAI\/.\..\/\"/, '') end
-        debug("got response: #{xml}")
+	if @parser == 'libxml' 
+          # remove default namespace for oai-pmh since libxml
+          # isn't able to use our xpaths to get at them 
+          # if you know a way around thins please let me know
+          xml = xml.gsub(
+            /xmlns=\"http:\/\/www.openarchives.org\/OAI\/.\..\/\"/, '') 
+        end
         return load_document(xml)
       rescue StandardError => e
         raise OAI::Exception, 'HTTP level error during OAI request: '+e, caller
-      #rescue EOFError => e
-      #  raise OAI::Exception, 'HTTP level error during OAI request: '+e, caller
       end
     end
 
@@ -196,7 +198,17 @@ module OAI
       end
     end
 
-    def verify_verb_arguments(opts, valid_opts)
+    def sanitize_verb_arguments(verb, opts, valid_opts)
+      # opts could mistakenly not be a hash if the method was called wrong
+      # client.get_record(12) instead of client.get_record(:identifier => 12)
+      unless opts.kind_of?(Hash)
+        raise OAI::Exception.new("method options must be passed as a hash") 
+      end
+
+      # add the verb
+      opts[:verb] = verb
+
+      # make sure options aren't using studly caps, and that they're legit
       opts.keys.each do |opt|
         if opt =~ /[A-Z]/
           raise OAI::Exception.new("#{opt} should use underscores")
