@@ -1,5 +1,7 @@
 ???
 - added Rakefile, removed standalone gemspec and test.rb
+- added deleted? convenience method to OAI::Record and OAI::Header
+- added libxml support (thanks terry.reese@orst.edu)
 
 v0.0.2 Mon May 15 13:59:33 EST 2006
 - added debug support to OAI::Client
